# python-template

./: CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  dictionary.py  list.py  pyproject.toml  requirements.txt  set.py  setup.cfg  strings.py  test_sysexit.py  tox.ini
.github/workflows/: ci.yml  python-app.yml  python-package.yml
data/: mary.txt
package/: app.py  electrical.py  navigation.py  pythonic.py  samplelib.py  samplelib1.py  samplelib2.py  samplelib3.py  script_template.py  structuring.py  style.py  using_main.py  why_import_star_is_bad.py
python_package/: hello.py
python_template/: calc.py  calc2.py
samples/: Lab-dictionary.py  Lab-set.py  Lab-tuple.py  README.md  Regular-expression.py  dictionary.py  function.py  hello_world.py  lab-list.py  len_examples.py  set.py  strings.py  tuple.py
samples/args_kwargs/: README.md  args_kwargs.py
samples/assert/: assert.py
samples/asychronous_programming/: asychronous_programming.py
samples/beginner/: README.md
samples/classes/: README.md
samples/common_mistakes/: common_mistakes.py
samples/control_flow/: control_flow.py
samples/counters/: README.md  counters.py
scripts/: entrypoint.sh  format.ps1  format.sh  lint.ps1  lint.sh
tests/: test_app.py  test_approx.py  test_builder_pattern.py  test_calc.py  test_data_types.py  test_dictionaries.py  test_dictionary.py  test_functions.py  test_generators.py  test_hello_world.py  test_lists.py  test_lists_example.py  test_package.py  test_pythonpath.py  test_sets_example.py  test_sorting.py  test_strategy_pattern.py  test_strings.py  test_strings_example.py  test_template.py  test_tuples_example.py  test_type_annotations.py
(+69 files in other folders)
