[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "unit: Unit Tests",
    "functional: Functional Tests",
]

[tool.tox]
legacy_tox_ini = """

[tox]
isolated_build = True
envlist = clean, py{38}, report, reportxml, reporthtml

[testenv]
setenv =
    PYTHONPATH={toxinidir}
    POWERTOOLS_TRACE_DISABLED=1
    PYTEST_ADDOPTS=--junit-prefix={envname} --junit-xml=coverage/junit.xml
    PIP_EXTRA_INDEX_URL=https://pypi.python.org/simple
deps =
    coverage
    pytest
    mock
    -rrequirements.txt
whitelist_externals = mkdir
commands =
    mkdir coverage/
    coverage run --omit=".tox/*,tests/*,.venv/*" -p -m pytest -vv tests/

[testenv:clean]
deps =
    coverage
    pytest
    mock
skip_install = true
envdir = {toxworkdir}/coverage
whitelist_externals = rm
commands =
    rm -rf dist/
    rm -rf coverage/
    coverage erase

[testenv:report]
deps = coverage
skip_install = true
envdir = {toxworkdir}/coverage
commands =
    coverage combine
    coverage report

[testenv:reporthtml]
deps = coverage
skip_install = true
envdir = {toxworkdir}/coverage
commands = coverage html --ignore-errors

[testenv:reportxml]
deps = coverage
skip_install = true
envdir = {toxworkdir}/coverage
commands = coverage xml --ignore-errors -o coverage/coverage.xml

[testenv:build]
skip_install = true
deps = build
commands =
    python -m build

[testenv:release]
deps =
    twine
skip_install = true
commands =
    {[testenv:build]commands}
    twine upload --skip-existing dist/*.*

"""